# graeScripts

./: .gitignore  LICENSE.txt  README.md  graescript_words.txt  requirements.txt  setup.cfg
.in_progress/: _find_duplicate_files.py  _outline_object.ipynb  _outline_object.py  _toDHB.py  _unzipack.py  _win_datatype_by_size.py  get_roots.py
cmdline/: README.md  colorvalue.py  pf_fix_path_sep.pyw
cmdline/colorvalue/: README.md  colorvalue.py  example_colorvalue.bat  html_colors.csv  requirements.txt
cmdline/crlf2lf/: CRLF_to_LF.py  README.md  example_crlf2lf.bat
cmdline/pfix/: README.md  example_pfix.bat  pf_fix_path_sep.pyw
cmdline/zipdir/: README.md  example_zipdir.bat  zipdir.py
src/graeScript/: __init__.py  htmlcolors.py
src/graeScript.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/graeScript/Drawing/: __init__.py  colorsToExcel.py  getcolors.py  schema.sql
src/graeScript/FileExplorer/: __init__.py  compare_files.py  delete_move_dirs.py  edit_filename.py  find_duplicate_files.py  find_files.py  find_photo_folder.py
src/graeScript/PDFiles/: __init__.py  create_pdfs.py  getPDFtext.py  get_pdf_content.py  picstopdf.py  requirements.txt
src/graeScript/data/: HTMLcolors.xlsx  htmlcolors.db  linux_block_protected.db  logging.conf  win_block_protected.db
src/graeScript/file_explorer/: __init__.py  delete_move_dirs.py  edit_filename.py  find_files.py  find_photo_folder.py
src/graeScript/markdown/: __init__.py  to_md_list.py  (+1 more)
tests/: test_FileExplorer.py  test_convert_nums.py  test_coverage_report.md  test_md_to_md_list.py  test_number_convesion.py
(+17 files in other folders)
