[metadata]
name = graeScript
version = 0.0.1.dev1
author = Graeson Thomas
license_dilw = LICENSE.txt
author_email = graeson.thomas@outlook.com
description = A package containing personal programs.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src
